@@ -12,6 +12,8 @@ Core and Builtins
 
 - bpo-29438: Fixed use-after-free problem in key sharing dict.
 
+- bpo-29546: Set the 'path' and 'name' attribute on ImportError for ``from ... import ...``.
+
 - Issue #29319: Prevent RunMainFromImporter overwriting sys.path[0].
 
 - Issue #29337: Fixed possible BytesWarning when compare the code objects.
